MDL-74815 course: Fixed the color contrast in site homepage

--- a/theme/boost/scss/moodle/course.scss
+++ b/theme/boost/scss/moodle/course.scss
@@ -729,6 +729,11 @@ span.editinstructions {
         display: flex;
         align-items: center;
     }
+    .moreinfo {
+        .icon {
+            margin-right: 0;
+        }
+    }
 }
 
 #frontpage-available-course-list,
